Some small style fixes, current song more visible when loading

--- a/public/style.css
+++ b/public/style.css
@@ -58,6 +58,9 @@ body{
 .playlist .current .star{
 	color: #afff84;
 }
+.playlist .track.selected {
+	background-color: rgba(175,216,251, 0.6);
+}
 #header{
 	color: #222;
 	position:fixed;
@@ -168,6 +171,7 @@ body{
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#656565', endColorstr='#282828',GradientType=0 );
 	background: linear-gradient(top, #656565 0%,#282828 100%);
 }
+
 #current figure{
 	padding:0;
 	margin:0;
